--- a/Plantillas sin usar/Mensajes privados/mb.css
+++ b/Plantillas sin usar/Mensajes privados/mb.css
@@ -1,5 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=PT+Sans);   
-@import url(http://fonts.googleapis.com/css?family=Open+Sans); 
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400);
 @import url(http://weloveiconfonts.com/api/?family=fontawesome);
 
 /* fontawesome */
@@ -14,18 +14,77 @@ body {
     font-family: 'PT Sans', sans-serif;
     width: 1000px;
     height: auto;
+    padding: 0;
 }
-span h3.fontawesome-envelope {
+/* nav */
+.box-tool {
+  width: 100%;
+  height: 40px;
+  background-color: #fff;
+  box-shadow: 1px 1px 1px #f0f0f0;
+  list-style-type: none;
+  position: fixed;
+  margin-top: -20px;
+  z-index: 9999;
+}
+.box-tool li:nth-child(1) {
+  position: relative;
+  margin: auto;
+  width: 40px;
+  height: 40px;
+  background-image: url('http://s11.postimg.org/58jltbaqb/logo.png');
+  background-repeat: no-repeat;
+  background-size: 120px;
+  background-position: center;
+  background-color: transparent;
+  border: none;
+    -webkit-transition: all .3s linear;
+  -moz-transition: all .3s linear;
+  transition: all .3s linear;
+}
+.box-tool .chat {
+  width: 50px;
+  height: 50px;
+  background-image:url('http://s27.postimg.org/mu9viuten/1418959285_357941.png');
+  border: none;
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position:center;
+  background-color: transparent;
+  margin: auto;
+  top: -44px;
+  float: right;
+  right: 20px;
+}
+.box-tool li:hover {
+   -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+    transform:scale(1.1);
+  border: none;
+  background-color: transparent;
+}
+.box-tool li img {
+  position: relative;
+  width: 120px;
+  height: 120px;
+}
+.fontawesome-envelope {
   margin-left:  20px;
   padding:  10px 10px;
-  background-color:  #A5DBEB;
+  background-color:  rgba(44,44,44,0.777);
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   font-size: 30px;
   color: #F5F5F5;
   width: 1600px;
 }
-
+.contenedor {
+	position: relative;
+	margin: auto;
+	top: 25px;
+	width: auto;
+}
 aside {
   position:  relative;
   margin-left: 20px;
@@ -50,7 +109,7 @@ nav li {
   padding:  10px 10px;
   border-bottom:  2px solid #fff;
   background-color:  #fafafa;
-  border-left: 5px solid #A5DBEB;
+  border-left: 5px solid rgba(44,44,44,0.854);
   border-radius:  3px;
   transition:  all .2s ease-in;
   cursor:  pointer;
@@ -58,6 +117,7 @@ nav li {
 nav li:hover {
   color:  #00CED1;
   background-color:  #E4E4E4;
+  border-left: 7px solid rgba(44,44,44,0.854);
 }
 nav li i {
   float: left;
@@ -90,26 +150,32 @@ input[target="search"] {
 a{
     text-decoration: none;
     color: white;
-    border-bottom: 2px solid aquamarine;
-    transition: all .3s ease-in-out;
+    transition: all .3s linear;
+    -webkit-transition: all .3s linear;
+    -moz-transition: all .3s linear;
     width: auto;
     position: relative;
     text-align: center;
     text-decoration: none;
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
     
 }
 a:hover {
     text-decoration: none;
-    color: black;
-    border-bottom: 2px solid tomato;
+    color: rgba(44,44,44,0.666);
     
 }
 a[target="name"] {
     text-decoration: none;
     color: grey;
-    border-bottom: 1px solid #C0FFEF;
     transition: all .3s ease-in-out;
     text-align: center;
+    font-style: normal;
+    cursor: pointer;
+}
+a[target="name"]:hover {
+	color: rgba(44,44,44,0.777);
 }
 .wrapper {
     text-align: center;
@@ -119,10 +185,11 @@ a[target="name"] {
     max-width: 70%; 
     position: absolute;
 	margin: 50px auto;
-    left:23%;
+    left: 337px;
+    font-family: 'Open Sans', sans-serif;
     
 }
-div.noti img{
+.noti img{
     width: 100px;
     height: 112px;
     float: left;
@@ -133,18 +200,26 @@ div.noti img{
 img:hover {
     opacity: 0.8;
 }
-div.noti {
+.noti {
     width: 850px;
     height: 113px;
-    background-color: #E8E8E8; 
+    background-color: #fff; 
     margin: 10px;
-    border: 1px solid #DDDDDD;
-    border-radius: 10px;
+    border-radius: 1px;
     display: table;
+    -webkit-box-shadow: 2px 2px 8px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    2px 2px 8px 0px rgba(50, 50, 50, 0.75);
+    box-shadow:         2px 2px 8px 0px rgba(50, 50, 50, 0.75);
+    -webkit-transition: all .3s linear;
+    -moz-transition: all .3s linear;
+    transition: all .3s linear;
 }
-div.noti:hover {
+.noti:hover {
     background-color: #fff;
     color: #000;
+    -webkit-box-shadow: 2px 2px 8px 0px rgba(46, 165, 188, 0.75);
+    -moz-box-shadow:    2px 2px 8px 0px rgba(46, 165, 188, 0.75);
+    box-shadow:         2px 2px 8px 0px rgba(46, 165, 188, 0.75);
 }
 
 blockquote {
@@ -158,7 +233,7 @@ blockquote {
     top: 20px;
 }
 i {
-    font-size: 9px;
+    font-size: 0.75457em;
     float: right;
     padding: 5px 5px;
     height: 86%;
