--- a/Plantillas sin usar/Mensajes privados/mb.css
+++ b/Plantillas sin usar/Mensajes privados/mb.css
@@ -270,11 +270,10 @@ span li {
   
   /*CENTRADO*/
   overflow: hidden;
-  position: absolute;
-  left: 60%;
+  position: fixed;
+  left: 30%;
   top: 50%;
   margin-top: -100px;
-  margin-left: -292px; /*150px*/
   zoom : 1;
   z-index: 9999;
   display: none;
@@ -285,13 +284,53 @@ span li {
 h1 {
   margin-top: 0;
 }
-
-#status {
-  font-size: 13px;
-  margin-bottom: 1rem;
-  text-align: center;
+#Asunto {
+	position: relative;
+	display: inline-block;
+	margin-right: 15px;
+	left: 20px;
+	padding: 0.5px 5px;
+		-webkit-transition: all. 3s linear;
+	-moz-transition: all .3s linear;
+	transition: all .3s linear;
 }
+label[for="Asunto"] {
+    position: relative;
+	display: inline-block;
+	padding: 4px 10px;
+	background-color: rgba(44,44,44,0.777);
+	color: white;
+	font-family: 'Open Sans', sans-serif;
+	line-height: 19px;
+	font-weight: 100;
+	left: 21px;
+}
+label[for="Contactos"] {
+	position: relative;
+	display: inline-block;
+	left: 71px;
+	padding: 4px 10px;
+	background-color: rgba(44,44,44,0.777);
+	color: white;
+	font-family: 'Open Sans', sans-serif;
+	line-height: 19px;
+	font-weight: 100;
 
+}
+#Contactos {
+	position: relative;
+	display: inline-block;
+	left: 70px;
+	padding: 0.5px 5px;
+	-webkit-transition: all. 3s linear;
+	-moz-transition: all .3s linear;
+	transition: all .3s linear;
+}
+#Contactos:focus, #Asunto:focus {
+	-webkit-box-shadow: -1px -1px 3px 0px rgba(37, 255, 188, 0.75);
+-moz-box-shadow:    -1px -1px 3px 0px rgba(37, 255, 188, 0.75);
+box-shadow:         -1px -1px 3px 0px rgba(37, 255, 188, 0.75);
+}
 .open {
   color: green;
 }
@@ -308,7 +347,7 @@ h1 {
 #message2 {
   width: 100%;
   padding: 0.5rem;
-  font-size: 1rem;
+  font-size: 1.4rem;
   border: 1px solid #D9D9D9;
   border-radius: 3px;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
@@ -316,34 +355,54 @@ h1 {
   margin-bottom: 1rem;
   font-family: 'Open Sans', sans-serif;
   display: block;
+  color: rgba(44,44,44,0.777);
 }
-
+button[type="button"], button[type="submit"] {
+	-webkit-transition: all .3s linear;
+	-moz-transition: all .3s linear;
+	transition: all .3s linear;
+}
 button[type="button"] {
   display: inline-block;
   border-radius: 3px;
   border: none;
-  font-size: 0.9rem;
-  padding: 0.6rem 1em;
+  font-size:  1.2rem;
+  padding: 1rem 1rem;
   color: white;
   margin: 0 0.25rem;
-  text-align: center;
   background: #FF0000;
   border-bottom: 1px solid #999;
-}
+  text-indent: center;
+  font-family: 'Open Sans', sans-serif;
 
+}
+button[type="button"]:hover {
+	  background-image: url("close.png");
+  background-position: center;
+  background-repeat: no-repeat;
+    background-size: 20px;
+    color: transparent;
+}
 button[type="submit"] {
   background: #7CE1FF;
   border-bottom: 1px solid #7CE1FF;
   display: inline-block;
   border-radius: 3px;
   border: none;
-  font-size: 0.9rem;
-  padding: 0.6rem 1em;
+  font-size:  1.2rem;
+  padding: 1rem 1rem;
   color: white;
   margin: 0 0.25rem;
   text-align: center;
+  text-indent: center;
+  font-family: 'Open Sans', sans-serif;
 }
-
+button[type="submit"]:hover {
+  background-image: url("send.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  color: transparent;
+}
 button:hover {
   opacity: 0.75;
   cursor: pointer;
