--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat+Alternates);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
 
 
 
@@ -61,22 +62,8 @@
    cursor: pointer;
 }
 .container-search{
-
-	height:auto;
-	width:40%;
-	margin:0 auto 0 auto;
-	margin-top:70px;
-	background-color:white;
-	
-	border:2px solid #a4f4e8;
-	padding:2px;
-
-	border-radius: 15px;
-	-moz-border-radius: 15px;
-	-webkit-border-radius: 15px;
-
-	padding-top:0px;
-	padding-bottom:0px;
+  margin: auto;
+  background-color: #fff;
 
 }
 .container-search #search-noelements{
@@ -88,103 +75,6 @@
 	margin-top:10px;
 
 }
-.container-search ul{
-
-	list-style-type: none;
-	margin-top:5px;
-	/*background-color:green;*/
-	height:100%;
-	width:100%;
-	padding-left:0px;
-
-
-}
-.container-search li{
-
-	margin-left:0px;
-	font:1.2em 'Montserrat Alternates';
-	/*background-color:red;*/
-	height:100px;
-	width:100%;
-	padding:18px 12px;
-	border-top:1px solid #a4f4e8;
-
-}
-.container-search li .container-img{
-
-	/*margin-top: 15px;*/
-	height:69px;
-	width:69px;
-	background-color: #ebf4f2;
-	padding:2px;
-	float:left;
-	margin-left:15px;
-
-
-}
-.container-search li .container-img img{
-
-	/*background-color:yellow;*/
-	height:65px;
-	width:65px;
-
-}
-.container-search li .container-img img:hover{
-
-	height:65px;
-	width:65px;
-	background-color:#ebf4f2;
-	/*padding:2px;*/
-	float:left;
-	/*margin-left:15px;*/
-	transform:scale(1.15);
-	  border-radius: 98%;
-
-}
-.container-search li .container-userdata{
-
-	/*background-color:violet;*/
-	height:50px;
-	width:290px;
-	float:left;
-	margin-left:10px;
-	padding:10px 10px;
-
-
-}
-.container-search li .container-fullname{
-
-	/*
-	background-color:orange;
-	height:5px;
-	width:50px;
-	*/
-	text-transform: capitalize;
-
-}
-.container-search li .container-username{
-
-	font-style:italic;
-
-}
-.container-search li .container-actions{
-
-	float:right;	
-	margin-top:0px;
-	margin-right:20px;
-
-	/*background-color:blue;*/
-}
-.container-search li .container-actions .item-action{
-
-
-	padding-left:10px;
-
-
-}
-
-
-
 
 
 
@@ -202,105 +92,6 @@
 .fa{
  font-size: .8em;
   line-height: 22px !important;
-}
-dropdown{
-   display: inline-block;
-   margin: -30px 0px; 
-}
-dropdown label, dropdown ul li{
-  display: block;
-  width: 200px;
-  background: #fff;
-  padding: 15px 20px;
-  color: #1ABC9C;
-}
-dropdown label:hover, dropdown ul li:hover{
-  background: #1ABC9C;
-  color: white;
-  cursor: pointer;
-  border-bottom: 1px solid aquamarine;
-}
-dropdown label, dropdown ul li.animatee{
-  display: block;
-  width: 200px;
-  background: #fff;
-  padding: 15px 20px;
-  color: #FF6B6B;
-}
-dropdown label:hover, dropdown ul li.animatee:hover{
-  background: #FF6B6B;
-  color: white;
-  cursor: pointer;
-  border-bottom: 1px solid aquamarine;
-}
-dropdown label, dropdown ul li.animatex{
-  display: block;
-  width: 200px;
-  background: #fff;
-  padding: 15px 20px;
-  color: #FFCA67;
-}
-dropdown label:hover, dropdown ul li.animatex:hover{
-  background: #FFCA67;
-  color: white;
-  cursor: pointer;
-  border-bottom: 1px solid aquamarine;
-}
-dropdown label{
-  color: #1ABC9C;
-  border-left: 4px solid #1ABC9C;
-  border-radius: 0 5px 0 0; 
-  position: relative;
-  z-index: 2;
-}
-dropdown input{
-  display: none;
-}
-dropdown input ~ ul{
-  position: relative;
-  visibility: hidden;
-  opacity: 0;
-  top: -20px;
-  z-index: 1;
-}
-dropdown input:checked + label{
-  background: #1ABC9C;
-  color: white;
-}
-
-dropdown input:checked ~ ul{
-  visibility: visible;
-  opacity: 1;
-  top: 0;
-}
-$colors: #E74C3C, #0072B5, #2C3E50;
-
-@for $i from 1 through length($colors) {
-  dropdown ul li:nth-child(#{$i}) {
-    border-left: 4px solid nth($colors, $i);
-    .fa{
-      color: nth($colors, $i);
-    }
-    &:hover {
-        background: nth($colors, $i);
-        color: white;
-      .fa{
-        color: white; 
-      }
-    }
-  }
-}
-
-.animate{
-  -webkit-transition: all .3s;
-  -moz-transition: all .3s;
-  -ms-transition: all .3s;
-  -ms-transition: all .3s;
-  transition: all .3s;  
-  backface-visibility:hidden;
-  -webkit-backface-visibility:hidden; /* Chrome and Safari */
-  -moz-backface-visibility:hidden; /* Firefox */
-  -ms-backface-visibility:hidden; /* Internet Explorer */
 }
 
 .fa-comment, .fa-bell {
