--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1589,234 +1589,8 @@ button:hover {
 }
 .fontawesome-eye-open, .fontawesome-star-half, .fontawesome-globe, .fontawesome-heart-empty, .fontawesome-star-empty  {
   font-size: 20px;
-  color:white;
-}
+  color:white;}
 
-
-
-
-
-.fontawesome-bell {
-  color: #FFF;
-  float: right;
-  cursor:pointer;
-  text-align:center;
-  font-size: 31px;
-  display: block;
-  position:absolute;
-  margin-right:-33px;
-  margin-top: -7px;
-}
-
-.fontawesome-bell:hover {
-  color: black;
-  border: 3px solid rgb(26, 188, 156);
-  border-right: none;
-  border-top: none;
-  border-left: none;
-}
-
-.notifications .messages {
-  display:block;
-  position:absolute;
-  top:70px;
-  right:100px;
-  width:240px;
-  max-height:240px;
-}
-
-.notifications .messages:before {
-  content:'.';
-  display:block;
-  position:absolute;
-  margin-left:-10px;
-  left:50%;
-  top:-18px;
-  width:0;
-  height:0;
-  color:transparent;
-  border:10px solid black;
-  border-color:transparent transparent white;
-}
-
-.notifications .messages .message {
-  display:block;
-  position:relative;
-  padding:10px;
-  background-color:white;
-  color:black;
-  text-decoration:none;
-}
-
-.notifications .messages .message + .message {
-  border-top:1px solid #e0e0e0;
-}
-
-
-.fontawesome-heart-empty {
-  color: pink;
-  font-size: 17px;
-}
-.fontawesome-coffee {
-  color: tomato;
-  font-size: 17px;
-}
-.fontawesome-user {
-  color: aquamarine;
-  font-size: 17px;
-}
-
-.count {
-      background-color: tomato;
-      border: 1px solid tomato;
-      border-radius: 14px;
-      color: white;
-      display: block;
-      font-size: 18px;
-      line-height: 20px;
-      opacity: 0.7;
-      padding: 0 7px;
-      position: absolute;
-      right: -5px;
-      top: -17px;
-      z-index: 10;
-      
-      -webkit-transition: all 0.2s ease;
-      -moz-transition: all 0.2s ease;
-      -ms-transition: all 0.2s ease;
-      o-transition: all 0.2s ease;
-      transition: all 0.2s ease;
-}
-
-.count:hover {
-        box-shadow: 0 1px 2px rgba(0,0,0,0.75);
-        opacity: 1;
-        right: -8px;
-        top: -20px;
-      }
-
-/* Segundo Menu Bola
-#Menu {
-  background:#eee;
-  color:#fff;
-  width:40px;
-  height:40px;
-  border:2px solid #eee;
-  -webkit-border-radius: 200px;
-  border-radius: 210px;
-  box-shadow:2px 0px 2px #444;
-  position:fixed;
-  left:2%;top:1%;
-  float: left;
-  margin:100px auto;
-  z-index:2;
-  overflow:hidden;
-  opacity: 1;
-  line-height: 1;
-  transition: all .3s ease-in-out;
-  outline: none;
-
-  }
-  #Menu:hover {
-    border: 1px solid #33F0DD;
-    -webkit-transform: scale(1.1);
- 
-
-  }
-
-  #centro {
-  padding-top: 0%;
-  width: 45%;
-  height: 47%;
-  background:#ccc;
-  border:5px solid #eee;
-  -webkit-border-radius: 30px;
-border-radius: 100px;
-  box-shadow:inset 0px 20px 45px #999;
-  position:absolute;
-  left:0;
-  right:0;
-  margin:75px auto;
-  z-index:2;
-  overflow:hidden;
-  font-size:9em;
-  text-shadow:0px 0px 15px #999;
-}
-
-#llinkedin {
-  color:rgba(14, 118, 168,0.5);
-  text-shadow: 1px 3px 6px #0e76a8,
-                0px 0px 0px #000,
-              1px 4px 6px #0e76a8;
-  background:#907AFB;
-  -webkit-border-radius:305px 0px 0px 0px;
-  border-radius:305px 0px 0px 0px;
-}
-
-#ddribbble {
-  color:rgba(226, 77, 135,0.5);
-    text-shadow: 1px 3px 6px #E24D87,
-                0px 0px 0px #000,
-              1px 4px 6px #E24D87;
-  background:#72FFB0;
-  -webkit-border-radius:0px 205px 0px 0px;
-  border-radius:0px 205px 0px 0px;
-}
-
-#ffacebook{
-  color:rgba(59, 89, 152,0.5);
-  text-shadow: 1px 3px 6px #00CEFC,
-                0px 0px 0px #000,
-              1px 4px 6px #0e76a8;
-  background:#F77AFB;
-  -webkit-border-radius:0px  0px 0px 205px;
-  border-radius:0px  0px 0px 205px;
-}
-
-#ttwitter {
-  color: #0092AC;
-    text-shadow: 1px 3px 6px #00CEFC,
-                0px 0px 0px #000,
-              1px 4px 6px #00CEFC;
-  background:#B9B9B9;
-  -webkit-border-radius:0px  0px 205px 0px ;
-  border-radius:0px  0px 205px 0px ;
-}
-#ttwitter span, #ffacebook span, #ddribbble span, #llinkedin span{
-margin-left:60px;
-margin-top:25px;
-}
-.size {
-  padding-top:15%;
-  font-size:2.5em;
-  margin-bottom:2%;
-  width:50%;
-    height:39%;
-  overflow:hidden;
-}
-
-  .left {
-    float:left;
-  }
-
-  .right {
-    float:right;
-  }
-
-#ffacebook:hover, #llinkedin:hover, #ddribbble:hover, #ttwitter:hover {
-    color:rgba(255,255,255,0.7);
-    cursor:pointer;
-
-}
-
-  .left {
-    float:left;
-  }
-
-  .right {
-    float:right;
-  }
-*/
    /* INFORMACION DEL USUARIO */
 
    .aboutuser {
