--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -1,4 +1,134 @@
-{% extends 'account/base_interface.html' %}
+<head>
+<style>
+.container {
+  list-style-type: none;
+  top: 70px;
+  position: relative;
+}
+.container li {
+  margin-right: 5px;
+  display: inline-block;
+  margin-top: 10px;
+}
+.target {
+  width: 280px;
+  height: 380px;
+  background-color: #ececec;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
+-moz-box-shadow:    0px 0px 5px 0px rgba(50, 50, 50, 0.75);
+box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.75);
+ font-style: normal;
+  
+}
+.target .photos {
+  width: 100%;
+  height: 50%;
+}
+.target .photos .cabeza {
+  background-image: url('http://www.hdwallpapers.in/walls/colorful_abstraction-wide.jpg');
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 90%;
+  border-bottom: 4px solid rgba(44,44,44,0.777);
+}
+.proffile {
+  width: 80px;
+  height: 80px;
+  position: relative;
+  margin: auto;
+  background-color: #000;
+  background-image: url('http://p1.pichost.me/i/66/1908073.jpg');
+  background-size: 130px;
+  background-position: center;
+  background-repeat: no-repeat;
+  top: 60%;
+  border: 2px solid rgba(44,44,44,0.777);
+  cursor: pointer;
+}
+.relation {
+  position: relative;
+  display: block;
+  margin: auto;
+  left: 0%;
+  top: 37%;
+  padding: 5px 7px 30px 7px;
+  background-color: rgba(44,44,44,0.777);
+  width: 60px;
+  border-radius: 30px;
+  height: 12px;
+  text-align: center;
+  color: white;
+  font-size: 1em;
+  font-family: 'Open Sans', sans-serif;
+}
+.fa-user {
+  margin-left: 1px;
+}
+.informacion {
+  list-style-type: none;
+  top: 40px;
+  margin: auto;
+  position: relative;
+  font-family: 'Open Sans', sans-serif;
+  font-style: normal;
+  left: 110px;
+  
+}
+.informacion li {
+  display: table;
+  text-align: center;
+}
+.nombre  {
+  font-size: 1.2em;
+  margin-right: 15px;
+  position: relative;
+}
+.apodo {
+  font-size: 1em;
+  position: relative;
+  left: 15px;
+}
+.estado {
+  left: 15px;
+  position: relative;
+  top: 25px;
+}
+.controls {
+  position: relative;
+  top: 69px;
+  list-style-type: none;
+  font-family: 'Open Sans', sans-serif;
+  color: rgba(44,44,44,0.866);
+  background-color: rgba(44,44,44,0.055);
+  padding: 30px 70px;
+  right: 0px;
+}
+.controls li {
+  display: inline-block;
+  margin-left: 2px;
+  margin-top: -10px;
+  float: right;
+  margin-right: 15px;
+  text-align: center;
+  cursor: pointer;
+  -webkit-transition: all .3s linear;
+  -moz-transition: all .3s linear;
+  transition: all .3s linear;
+}
+.fa-plus:hover {
+  color: #246068;
+  
+}
+.fa-heart:hover {
+  color: tomato;
+}
+.fa-reply:hover {
+  color: #2E4272;
+}
+</style>
+</head>{% extends 'account/base_interface.html' %}
 
 {% block content %}
 
@@ -9,26 +139,28 @@
 {% endif %}
 
 
-	<ul>
+	<ul class="container">
 	{% for item in resultSearch %}
-	    <li>
-	    	<div class="container-img">
-	    		<img src="{{STATIC_URL}}img/bola/2.jpg">
-	    	</div>
-	    	<div class="container-userdata">
-		    	<div class="container-fullname">
-		    		{{ item.first_name }} {{ item.last_name }}
-		    	</div>
-		    	<div class="container-username">
-		    		{{ item.username }}
-		    	</div>	    		
-	    	</div>
-	    	<span class="container-actions">
-	    		<span class="item-action">Agregar</span>
-	    		<span class="item-action"><a href="/profile/{{ item.username }}">Ver perfil</a></span>
-	    	</span>
-	    	
-	    </li>
+<li>
+<div class="target">
+ <div class="photos">
+   <div class="cabeza">
+     <span class="relation">Friend<i class="fa fa-user fa-lg"></i></span>
+     <div class="proffile"><a href="/profile/{{ item.username }}"></a></div>
+   </div>
+  </div>
+  <ul class="informacion">
+    <li class="nombre">{{item.first_name}} {{item.last_name}}</li>
+    <li class="apodo">{{ item.username }}</li>
+    <li class="estado">Feliz</li>
+    </ul>
+  <ul class="controls">
+    <li class="fa fa-heart fa-2x"><i></li>
+    <li class="fa fa-reply fa-2x"></li>
+    <li class="fa fa-plus fa-2x"></li> 
+  </ul>
+  </div>
+  </li>
 	{% endfor %}
 	</ul>
 </div>
