--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -146,7 +146,7 @@ box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.75);
  <div class="photos">
    <div class="cabeza">
      <span class="relation">Friend<i class="fa fa-user fa-lg"></i></span>
-     <div class="proffile"><a href="/profile/{{ item.username }}"></a></div>
+     <div class="proffile" onclick="location.href='/profile/{{item.username}}'"></div>
    </div>
   </div>
   <ul class="informacion">
